<resources>
    <string name="app_name">Android Weather App</string>
    <string name="city_country">Enugu, Nigeria</string>
    <string name="date_today">Friday, 8 July</string>
    <string name="current_temperature">26</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="temp_information">26, partly cloudy</string>
    <string name="wind">WIND SPEED</string>
    <string name="wind_speed">18 km/h</string>
    <string name="humidity">MOISTURE</string>
    <string name="min_temp">MIN TEMP</string>
    <string name="max_temp">MAX TEMP</string>
    <string name="humidity_rate">73%</string>
    <string name="day_of_week">Mon</string>
    <string name="action_settings">Settings</string>
    <string name="degree_fahrenheit">FAHRENHEIT</string>
    <string name="degree_centigrade">CENTIGRADE</string>
    <string name="location_hints">Type city or postcode</string>
    <string name="location_example">Example Malmo, Sweden</string>
    <string name="add_new_location">Add new location</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>
    <string name="google_api_key">AIzaSyCe0vdT73vtLNX8NR7HgRe3ekZ4UgR2e6Q</string>


</resources>
