<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:paddingBottom="@dimen/_4sdp"
    android:paddingTop="@dimen/_4sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/time_of_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_8sdp"
        android:text="@string/day_of_week"
        android:textColor="@color/colorBlack"/>

    <ImageView
        android:id="@+id/three_hour_weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/small_weather_icon"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/three_hour_weather_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_11sdp"
        android:text="@string/current_temperature"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/threehour_weather_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_8sdp"
        android:text="@string/current_temperature"
        android:textColor="@color/colorBlack"/>
    <!-- <TextView
        android:id="@+id/three_hour_weather_result_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_8sdp"
        android:text="@string/current_temperature"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/three_hour_weather_result_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_8sdp"
        android:text="@string/current_temperature"
        android:textColor="@color/colorWhite"/> -->
</LinearLayout>
