<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/city_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ico_partly_cloudy"
            android:layout_marginTop="@dimen/_21sdp"/>

         <TextView
            android:id="@+id/weather_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/weather_result_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/temp_min_max_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/humidity_rate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_16sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wind"/>

                <TextView
                    android:id="@+id/wind_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text=""/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/_16sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp"
                    android:layout_gravity="center_horizontal"

                    android:textStyle="bold"
                    android:text="@string/humidity"/>

                <TextView
                    android:id="@+id/humidity_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text=""/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Three Hour Forecast"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorBlack"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/threehour_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:scrollbars="none"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Five day Forecast"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorWhite"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_daily_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:scrollbars="none"/>

    </LinearLayout>
</LinearLayout>